infrastructure/staging/elastic/node-type-svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: es-elasticsearch
  labels:
    app: es
spec:
  ports:
    - name: https
      port: 9200
      targetPort: 9200
  selector:
    # Select coordinating nodes
    elasticsearch.k8s.elastic.co/cluster-name: "es"
#---
#apiVersion: v1
#kind: Service
#metadata:
#  name: es-elasticsearch-read
#  labels:
#    app: es
#spec:
#  ports:
#    - name: https
#      port: 9200
#      targetPort: 9200
#  selector:
#    # Select coordinating nodes
#    elasticsearch.k8s.elastic.co/cluster-name: "es"
#    elasticsearch.k8s.elastic.co/node-master: "false"
#    elasticsearch.k8s.elastic.co/node-data: "false"
#    elasticsearch.k8s.elastic.co/node-ingest: "false"
#    elasticsearch.k8s.elastic.co/node-ml: "false"
#---
#apiVersion: v1
#kind: Service
#metadata:
#  name: es-elasticsearch-write
#  labels:
#    app: es
#spec:
#  ports:
#    - name: https
#      port: 9200
#      targetPort: 9200
#  selector:
#    # Select ingest nodes
#    elasticsearch.k8s.elastic.co/cluster-name: "es"
#    elasticsearch.k8s.elastic.co/node-ingest: "true"
